@@ -1908,6 +1908,12 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+for|for
+control|(
+init|;
+condition|;
+control|)
+block|{
 if|if
 condition|(
 name|current
@@ -1949,15 +1955,14 @@ name|pointer
 operator|++
 argument_list|)
 expr_stmt|;
-return|return
-name|next
-argument_list|()
-return|;
 block|}
 else|else
+block|{
 return|return
 literal|false
 return|;
+block|}
+block|}
 block|}
 comment|/** Optimized implementation. */
 DECL|method|read
@@ -2097,6 +2102,12 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+for|for
+control|(
+init|;
+condition|;
+control|)
+block|{
 if|if
 condition|(
 name|current
@@ -2142,17 +2153,12 @@ name|pointer
 operator|++
 argument_list|)
 expr_stmt|;
-return|return
-name|skipTo
-argument_list|(
-name|target
-argument_list|)
-return|;
 block|}
 else|else
 return|return
 literal|false
 return|;
+block|}
 block|}
 DECL|method|termDocs
 specifier|private
